--- a/Client/index.html
+++ b/Client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RCS - Remote Control System</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🖥️</text></svg>">
     
     <!-- Fonts & External Libs -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Consolas&display=swap" rel="stylesheet"/>
@@ -73,7 +74,7 @@
           </a>
         </div>
         <hr class="horizontal dark mt-0 mb-0">
-        <div class="collapse navbar-collapse w-auto h-auto" id="sidenav-collapse-main">
+        <div class="navbar-collapse w-auto h-auto show" id="sidenav-collapse-main">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" data-tab="dashboard" role="button">
