--- a/Client/index.html
+++ b/Client/index.html
@@ -64,7 +64,7 @@
     <div class="d-flex disabled-ui" id="app-wrapper">
       
       <!-- ASIDE: SIDEBAR NAVIGATION - Soft UI Style -->
-      <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3" id="sidebar">
+      <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0" id="sidebar">
         <div class="sidenav-header">
           <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
           <a class="navbar-brand m-0" style="cursor: pointer;" id="logo-heading" title="Quay về Dashboard">
@@ -141,6 +141,11 @@
         <!-- Navbar -->
         <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur">
           <div class="container-fluid py-1 px-3">
+            <!-- Hamburger Menu Button - Left Side -->
+            <button id="menu-toggle" class="btn btn-link text-dark p-0 me-3 d-lg-none" title="Toggle Menu">
+              <i class="fas fa-bars fa-lg"></i>
+            </button>
+            
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
                 <li class="breadcrumb-item text-sm">
@@ -167,17 +172,6 @@
                   <i class="fas fa-circle me-1"></i> Disconnected
                 </span>
               </div>
-              <ul class="navbar-nav justify-content-end">
-                <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
-                  <a href="javascript:;" class="nav-link text-body p-0" id="menu-toggle">
-                    <div class="sidenav-toggler-inner">
-                      <i class="sidenav-toggler-line"></i>
-                      <i class="sidenav-toggler-line"></i>
-                      <i class="sidenav-toggler-line"></i>
-                    </div>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
         </nav>
